Central Sentry buildout
=======================


2.0 (unreleased)
----------------

- Move to sentry 8, run redis, memcached and all sentry processes from supervisord, only use an external postgresql. [f.vandijk]

- Remove awstats.conf include from the nginx.conf template. [fred]


1.4 (2016-07-19)
----------------

- Reset Proxy header in nginx proxy config. [fred]


1.3 (2014-02-05)
----------------

- Update to sentry 6.4.4 and lots of other new versions.
  [maurits]


1.2 (2014-02-05)
----------------

- Production supervisor: use settings.py.  This will read
  settings_local.py as well, so we can move our production.py changes
  there.
  [maurits]


1.1 (2014-02-05)
----------------

- Try to import * from setting_local.py in settings.py.
  [maurits]

- Add postgresql support.
  [maurits]

- Fresh zc.buildout and friends.
  [maurits


1.0 (2014-01-31)
----------------

- Moved to bitbucket.
  [maurits]

- Initial release.
  [vincent]